gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/const_ctor.d
version https://git-lfs.github.com/spec/v1
oid sha256:207faef1c54f57a5e4fab4aa8a22155eeb80a201b11949c8e8ec543359e7138f
size 447
